<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="UNINITIALIZE" Id="{991ec388-cac6-487d-b8f8-7cafcc904dc6}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION UNINITIALIZE : BOOL
VAR_INPUT
END_VAR
VAR
	i : INT;
	in_progress : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
in_progress := TRUE;
	
FOR i := 0 TO CONSTANTS.SECTION1_NUM_DIG_TESTS - 1 DO
	GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].LIVE_BOOL := FALSE;
	GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].Result := 'FAIL';
END_FOR

FOR i := 0 TO CONSTANTS.SECTION1_NUM_HMI_TESTS - 1 DO
	GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[i].LIVE_BOOL := FALSE;
	GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[i].Result := 'FAIL';
END_FOR

FOR i := 0 TO CONSTANTS.SECTION2_NUM_DIG_TESTS - 1 DO
	GVL_IO_STRUCTS.IO_MAP_SECTION2_DIG[i].LIVE_BOOL := FALSE;
	GVL_IO_STRUCTS.IO_MAP_SECTION2_DIG[i].Result := 'FAIL';
END_FOR

FOR i := 0 TO CONSTANTS.SECTION2_NUM_HMI_TESTS - 1 DO
	GVL_IO_STRUCTS.IO_MAP_SECTION2_HMI[i].LIVE_BOOL := FALSE;
	GVL_IO_STRUCTS.IO_MAP_SECTION2_HMI[i].Result := 'FAIL';
END_FOR


FOR I := 0 TO GVL_LOGS.NUM_TESTS_LOGGED - 1 DO
	GVL_LOGS.TEST_RESULTS_ARRAY[i].Description := '';
	GVL_LOGS.TEST_RESULTS_ARRAY[i].Index := 0;
	GVL_LOGS.TEST_RESULTS_ARRAY[i].Result := '';
END_FOR

FOR i := 0 TO CONSTANTS.HMI_HOME_NUM_INSTRUCTIONS - 1 DO
		GVL_HMI.HMI_HOME_INSTRUCTIONS[i].Status := FALSE;
END_FOR

FOR i := 0 TO CONSTANTS.HMI_SECTION_1_NUM_INSTRUCTIONS - 1 DO
		GVL_HMI.HMI_SECTION_1_INSTRUCTIONS[i].Status := FALSE;
END_FOR

FOR i := 0 TO CONSTANTS.HMI_SECTION_2_NUM_INSTRUCTIONS - 1 DO
		GVL_HMI.HMI_SECTION_2_INSTRUCTIONS[i].Status := FALSE;
END_FOR

GVL_LOGS.NUM_TESTS_LOGGED := 0;

GVL_HMI.ACTIVE_HMI_VIEW := 0;


in_progress := FALSE;

Uninitialize := TRUE;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>